...
                  },
                )),
            Padding(
                padding: const EdgeInsets.only(
                    left: 48, right: 48, bottom: 32, top: 8),
                child: RoundCornerButtonWidget(
                  buttonKey: Key('btn_create_acc'),
                  bgColor: ColorHelper.bgColor,
                  onTap: () {
                    Navigator.pushNamed(
                      context,
                      Routes.SignupPage,
                    );
...
